# ai-context-vault

./: .cursorrules  .gitignore  AIRules.md  Cargo.toml  LICENSE  README.md  function.bash  function.go  go.mod  jest.config.js  manifest.json  package-lock.json  package.json  popup.html  tsconfig.json  webpack.config.js
cloudflare-encryption/: .gitignore  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
cloudflare-encryption/src/: index.ts
documentation/features/: monetization-testing.md  monetization.md
public/: manifest.json  options.html  questions.json  supercategories.json
scripts/: bump-version.js  generate-icons-grey.js  generate-icons.js  generate-icons.sh  github.css  md_to_pdf.sh  release.js  reload-extension.js  zip-build.js
src/: background.ts  content.ts  index.js  popup.ts  setupTests.ts  types.ts
src/background/: background.js  background.ts
src/components/: AdConsentPrompt.tsx  AddBookmarkButton.tsx  AddContextButton.tsx  FeatureNagScreen.tsx  FeatureToggle.tsx  GitHubSyncToggle.tsx  GodModeLogs.jsx  GodModeLogs.tsx  GodModeToggle.jsx  GodModeToggle.tsx  Options.tsx  PaymentPrompt.tsx  TrialStatus.tsx  withTrialProtection.tsx
src/content/: content.js  inject-combined.css  inject.css  inject.js  shadowDomWrapper.js  styles.css  ui-overlay.js
src/hooks/: useFeatureEnabled.ts
src/options/: options.html  options.js
src/services/: githubSettings.js  godModeObserver.js  godModeStorage.js  indexedDBStorage.js  patEncryption.js  providers.js
src/storage/: contextStorage.js  languageList.js  oracle-storage.ts  (+1 more)
src/utils/: id.ts  (+8 more)
(+36 files in other folders)
