[package]
name = "cloudflare-encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Crypto",
    "CryptoKey",
    "SubtleCrypto",
    "TextEncoder",
    "TextDecoder",
    "ArrayBuffer",
    "Uint8Array"
]}
worker = "0.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0" 